examples/Passing/Variables/no_assign.c
int main() {
    int a;
    int b;
    int c;
    return 5;
}
