examples/Failing/Variables/bad_var_name.c
int main() {
    int a b = 5;
    return b;
}
